# wikis

./: README.md
general_stuff/: color_your_git.md  mount_usb_in_ubuntu.md  remove_terminator_close_multiple_terminals_warning.md  vim_tutorial.md  visualize_md_files_in_firefox.md
git/: git_rebase.md
jhonny/: jhonnysetup.md
mrc/: animate_plot.md  convert_nb2pdf.md
pcl/: get_openni_work_with_asus_xtion.md  save_images_from_kinect.md
robocup/ros_pkg_template/my_package_name/: CMakeLists.txt  README.md  package.xml  setup.py
robocup/ros_pkg_template/my_package_name/ros/doc/: README.md
robocup/ros_pkg_template/my_package_name/ros/launch/: my_node_launchfile.launch
robocup/ros_pkg_template/my_package_name/ros/scripts/: my_node_name
robocup/ros_pkg_template/my_package_name/ros/src/my_package_name_ros/: my_node_implementation.py
robocup_at_home/: automated_launch_of_cart_ctrl_jenny.md  important_prerecorded_poses.txt  jenny_arm_cart_control.md
robocup_at_work/: commands.md~  configure_hokuyo_for_at_work_repo.md~  connect_only_to_arm.md  create_gazeo_world.md  ethercat_connection.md~  ethercat_youbot_connection.md  hokuyo.md~  hydro_nav.md~  hydro_slam.md~  joypad_teleop.md~  no_grub.md  no_gui_in_yb.md  rockin_packing_list.txt  shared_connection.md  tasks_for_competition.md  test_--no-refbox.md  test_linear_motions.md  wifi_connection.md~
rockin/: datamatrix_finder.md  move_it.md
ros/: create_video_from_rosbag.md
scripts/: README.md  common.sh  conda-bashrc  dim_light.sh  external_mac_german_keyboard_layout.sh  permanent.sh  robocup.sh  ros-common.sh  (+2 more)
(+39 files in other folders)
